# wav2vec2mdd-Text

./: README.md
data/: duration.py  test.tsv  train.tsv  valid.phn  valid.ref  valid.tsv
experiment/: mdd.sh  result.py  run.sh  test.sh
experiment/config/: base_finetune.yaml
experiment/oldresult/: human_our_detail  hypo.txt  hypo.units-checkpoint_best.pt-test.txt  ref.txt  ref_human_detail  ref_our_detail
experiment/result/: annotation.txt  human_our_detail  hypo.txt  hypo.word-checkpoint_best.pt-test.txt  ref.word-checkpoint_best.pt-test.txt  ref_our_detail
fairseq/examples/speech_recognition/: infer.py  transducer_decoder.py  transducer_infer.py  w2l_decoder.py  w2l_decoder_old.py
fairseq/fairseq/: checkpoint_utils.py  sequence_generator.py
fairseq/fairseq/criterions/: cross_entropy_contrast.py  ctc.py  ctc_constrast.py  ctc_constrast_plus.py  ctc_error.py  ctc_text.py  joint.py  mil.py  transducer.py
fairseq/fairseq/distributed/: distributed_timeout_wrapper.py
fairseq/fairseq/modules/: __init__.py  anti_mha.py
fairseq/fairseq/tasks/: anti.py  fairseq_task.py  mix.py  multi_instance.py  text_condition.py
fairseq/fairseq_cli/: hydra_train.py
reslut/: common.py  data.json  human_our_detail  ins_del_sub_cor_analysis.py  per  ref_human_detail  ref_our_detail  run.sh  show.py  wer_per_utt_details.pl  y_pred  y_true  yy_pred  yy_true
viterbi/: CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  setup.py  test.py  viterbi.cpp  viterbi.h
(+19 files in other folders)
